opam-version: "2.0"
maintainer: [
  "Stefanie Schirmer @linse"
  "Hannes Mehnert"
]
authors: [
  "Stefanie Schirmer @linse"
  "Hannes Mehnert"
]
homepage: "https://github.com/roburio/caldav"
bug-reports: "https://github.com/roburio/caldav/issues"
dev-repo: "git+https://github.com/roburio/caldav.git"
tags: ["org:mirage" "org:robur"]
doc: "https://roburio.github.io/caldav/"
license: "ISC"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

pin-depends: [ 
  ["webmachine.dev" "git+https://github.com/roburio/ocaml-webmachine.git#webdav"]
  ["mirage-kv-mem.dev" "git+https://github.com/mirage/mirage-kv-mem.git"]
  ["mirage-kv.dev" "git+https://github.com/samoht/mirage-kv.git#rw"]
  ["mirage-kv-lwt.dev" "git+https://github.com/samoht/mirage-kv.git#rw"]
]

depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {build}
  "alcotest" {with-test}
  "ounit" {with-test}
  "mirage-random-test" {with-test}
  "mirage-clock-unix" {with-test}
  "mirage-kv-mem" {with-test}
  "ppx_deriving" {build}
  "webmachine" 
  "lwt"
  "ptime"
  "cohttp-lwt-unix"
  "nocrypto"
  "xmlm"
  "tyxml"
  "icalendar"
  "rresult"
]

synopsis: "A CalDAV server"
description: """
A CalDAV server. Supports everything from the roburio/icalendar library.
Also supports a bit of WebDAV.
"""
