opam-version: "2.0"
maintainer: [
  "Stefanie Schirmer @linse"
  "Hannes Mehnert"
]
authors: [
  "Stefanie Schirmer @linse"
  "Hannes Mehnert"
]
homepage: "https://github.com/roburio/caldav"
bug-reports: "https://github.com/roburio/caldav/issues"
dev-repo: "git+https://github.com/roburio/caldav.git"
tags: ["org:mirage" "org:robur"]
doc: "https://roburio.github.io/caldav/"
license: "ISC"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

pin-depends: [
  ["webmachine.dev" "git+https://github.com/roburio/ocaml-webmachine.git#webdav"]
]

depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {build}
  "alcotest" {with-test & >= "0.8.5"}
  "ounit" {with-test & >= "2.0.0"}
  "mirage-random-test" {with-test}
  "tcpip" {with-test & >= "3.7.0"}
  "mirage-clock-unix" {with-test & >= "2.0.0"}
  "mirage-kv-mem" {with-test & >= "2.0.0"}
  "mirage-kv" {>= "3.0.0"}
  "mirage-clock" {>= "2.0.0"}
  "mirage-random" {>= "2.0.0"}
  "ppx_deriving" {>= "4.3"}
  "webmachine"
  "lwt" {>= "4.0"}
  "ptime" {>= "0.8.5"}
  "cohttp" {>= "2.0.0"}
  "cohttp-lwt" {>= "2.0.0"}
  "cohttp-lwt-unix" {with-test & >= "2.0.0"}
  "mirage-crypto"
  "mirage-crypto-rng"
  "base64" {>= "3.0.0"}
  "xmlm" {>= "1.3.0"}
  "tyxml" {>= "4.3.0"}
  "icalendar" {>= "0.1.2"}
  "rresult" {>= "0.6.0"}
  "sexplib" {>= "v0.12.0"}
  "ppx_sexp_conv" {>= "v0.12.0"}
  "logs" {>= "0.6.3"}
  "hex" {>= "1.4.0"}
]
synopsis: "A CalDAV server"
description: """
A CalDAV server. Supports everything from the roburio/icalendar library.
Also supports a bit of WebDAV.
"""
