(library
 (name caldav)
 (public_name caldav)
 (preprocess
  (pps ppx_deriving.std ppx_sexp_conv))
 (libraries
  logs
  lwt
  ptime
  mirage-kv
  cohttp
  xmlm
  tyxml
  icalendar
  digestif
  mirage-crypto-rng
  mirage-crypto-rng-mirage
  base64
  caldav.webmachine
  cohttp-lwt
  mirage-clock
  sexplib
  ohex
  metrics))
